--- a/ai_chat_bot/data_knowledge.json
+++ b/ai_chat_bot/data_knowledge.json
@@ -19,6 +19,10 @@
     {
       "question": "when were you created ",
       "answer": "The date of my creation is 27.12.2023 at 3:10 AM."
+    },
+    {
+      "question": "who is cristiano ronaldo",
+      "answer": "football player"
     }
   ]
 }
